--- a/transfer-service-ci-demo/Jenkinsfile
+++ b/transfer-service-ci-demo/Jenkinsfile
@@ -4,7 +4,8 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-              echo 'Building...'
+              sh 'cd transfer-service-ci-demo/api-tests'
+              sh 'mvn clean test-compile'
             }
         }
         stage('Test') {
